[package]
name = "Image-with-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.83"
base64 = "0.13.0"
image = "0.24.4"

# The bindgen crate is lightweight, but the web-sys crate is not. We can specify a list of features by creating a separate table with the name of the crate appended at the end of the table name.
[dependencies.web-sys]
version = "0.3.60"
features = ["console"]
